force-app/main/default/objects/Job_Position__c/fields/Available_for_Website__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Website</label>
    <type>Checkbox</type>
</CustomField>