force-app/main/default/objects/Job_Position__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Positions</relationshipLabel>
    <relationshipName>Job_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>