force-app/main/default/objects/Job_Position__c/fields/Industrial_Knowledge_Required__c.field-meta.xml
<CustomField>
    <fullName>Industrial_Knowledge_Required__c</fullName>
    <inlineHelpText>Enter comma-separated Industry names relevant to job position. For example: Manufacturing, Information Technology, Healthcare, Banking, Automotive, etc.</inlineHelpText>
    <label>Industrial Knowledge Required</label>
    <length>250</length>
    <type>Text</type>
</CustomField>