force-app/main/default/objects/Job_Position__c/fields/No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days__c</fullName>
    <description>Enter the number of days per week the employee is required to work from the office for this hybrid role.</description>
    <inlineHelpText>Enter the number of days per week the employee is required to work from the office for this hybrid role.</inlineHelpText>
    <label>Working Days for Hybrid</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>