force-app/main/default/objects/Job_Position__c/validationRules/Require_Close_Date_When_Status_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Close_Date_When_Status_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c , &quot;Closed&quot;),
    ISBLANK(Close_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Close_Date__c</errorDisplayField>
    <errorMessage>Close Date is required when Status is Closed.</errorMessage>
</ValidationRule>