force-app/main/default/objects/Job_Position__c/validationRules/Require_Open_Date_When_Status_Open.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Open_Date_When_Status_Open</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c , &quot;Open&quot;),
    ISBLANK(Open_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Open_Date__c</errorDisplayField>
    <errorMessage>Open Date is required when Status is Open.</errorMessage>
</ValidationRule>