force-app/main/default/objects/Job_Position__c/validationRules/VR1_JP_Client_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>VR1_JP_Client_Status</fullName>
    <active>true</active>
    <description>Client cannot be changed for a closed position</description>
    <errorConditionFormula>ISCHANGED(  Client_Name__c ) &amp;&amp; ISPICKVAL(Status__c, &quot;Closed&quot;)</errorConditionFormula>
    <errorMessage>Client cannot be changed for a closed position</errorMessage>
</ValidationRule>