force-app/main/default/objects/Job_Position__c/validationRules/VR6_Office_Days_field_is_compulsary.validationRule-meta.xml
<ValidationRule>
    <fullName>VR6_Office_Days_field_is_compulsary</fullName>
    <active>true</active>
    <description>If &quot;work mode&quot; field is hybrid then &quot;no of days in office&quot; is compulsory to fill</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Work_Mode__c, &apos;Hybrid&apos;),
    ISBLANK(No_Of_Days__c)
)</errorConditionFormula>
    <errorDisplayField>No_Of_Days__c</errorDisplayField>
    <errorMessage>If &quot;work mode&quot; field is hybrid then &quot;no of days in office&quot; is compulsory to fill</errorMessage>
</ValidationRule>