force-app/main/default/objects/Job_Position__c/listViews/Deactivated_Job.listView-meta.xml
<ListView>
    <fullName>Deactivated_Job</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Recruiter__c</columns>
    <columns>Project__c</columns>
    <columns>Hired_Candidate__c</columns>
    <columns>Total_Openings__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Available_for_Website__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Deactivated Job</label>
</ListView>