force-app/main/default/objects/Job_Position__c/listViews/Job_Position_List_View.listView-meta.xml
<ListView>
    <fullName>Job_Position_List_View</fullName>
    <columns>NAME</columns>
    <columns>Job_Title__c</columns>
    <columns>Status__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Hired_Candidate__c</columns>
    <columns>Total_Openings__c</columns>
    <columns>Open_Date__c</columns>
    <columns>Close_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Job Position List View</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>